feat: Se agrego el servicio edad promedio y se modifico el servicio cleintes por edad