@@ -3,7 +3,11 @@ package com.testbackend.demo.service;
 import com.testbackend.demo.model.Cliente;
 import com.testbackend.demo.repository.ClienteRepository;
 import org.springframework.stereotype.Service;
+
+import java.time.LocalDate;
+import java.time.Period;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class ClienteService {
@@ -17,17 +21,39 @@ public class ClienteService {
         return clienteRepository.save(cliente);
     }
 
-    public List<Cliente> listarClientesOrdenadosPorNombre() {
+    public List<Cliente> clientesPorNombre() {
         return clienteRepository.findAll()
                 .stream()
                 .sorted((c1, c2) -> c1.getNombreCompleto().compareToIgnoreCase(c2.getNombreCompleto()))
                 .toList();
     }
 
-    public List<Cliente> listarClientesOrdenadosPorEdad() {
+    public List<Map<String, Object>> clientesPorEdad() {
         return clienteRepository.findAll()
                 .stream()
-                .sorted((c1, c2) -> c1.getFechaNacimiento().compareTo(c2.getFechaNacimiento()))
-                .toList();
+                .sorted((c1, c2) -> Period.between(c1.getFechaNacimiento(), LocalDate.now())
+                        .getYears() - Period.between(c2.getFechaNacimiento(), LocalDate.now()).getYears())
+                .map(cliente -> {
+                    Map<String, Object> resultado = Map.of(
+                            "nombre", cliente.getNombreCompleto(),
+                            "edad", Period.between(cliente.getFechaNacimiento(), LocalDate.now()).getYears()
+                    );
+                    return resultado;
+                })
+                .collect(Collectors.toList());
+    }
+
+    public Map<String, Object> promedioEdad() {
+        List<Cliente> clientes = clienteRepository.findAll();
+        long cantidadClientes = clientes.size();
+        double promedioEdad = clientes.stream()
+                .mapToInt(cliente -> LocalDate.now().getYear() - cliente.getFechaNacimiento().getYear())
+                .average()
+                .orElse(0);
+
+        Map<String, Object> resultado = new HashMap<>();
+        resultado.put("Clientes", cantidadClientes);
+        resultado.put("EdadPromedio", promedioEdad);
+        return resultado;
     }
 }
